style: article box height to prevent loading jump

--- a/src/components/feed/ArticleLoad.css
+++ b/src/components/feed/ArticleLoad.css
@@ -1,9 +1,13 @@
+.article-box {
+	height: 300px;
+}
+
 .lds-dual-ring {
 	display: inline-block;
 	font-size: 10pt;
 	text-align: center;
 	width: 100%;
-	height: 60px;
+	/* height: 255px; */
 }
 .lds-dual-ring:before {
 	clear: left;
